Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3>Pasta Boloñesa <span class="origen">(ciudad de Bolonia)</span></h3>
                 <p><strong>Ingredientes:</strong> Carne molida de res, cebolla, apio, zanahoria, vino tinto, puré de tomate, caldo de carne, leche entera, sal, pimienta, aceite de oliva, pasta (tagliatelle o espagueti)</p>
                 <p><strong>Descripción:</strong>  Un plato clásico de la cocina italiana. Consiste en una deliciosa salsa de carne (ragú) a fuego lento, hecha con carne de res o de ternera, tomate, zanahoria, apio, cebolla y un toque de vino. La salsa se sirve sobre un tipo de pasta, tradicionalmente tagliatelle, aunque es común verla con espagueti.</p>
-                <p class="dato-curioso"><strong>Dato curioso:</strong> En España existe una versión muy parecida llamada "Paella de Pollo".</p>
+                <p class="dato-curioso"><strong>Dato curioso:</strong> En 1982, la Accademia Italiana della Cucina depositó la receta oficial del ragú boloñés en la Cámara de Comercio de Bolonia para preservar la tradición. </p>
             </article>
 
             <article class="plato-card">
