Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#platos">Ir a la sección de platos</a></li>
-            <li><a href="contacto.html">Inscríbete</a></li>
+            <li><a href="contacto.html">Unete</a></li>
         </ul>
     </nav>
 
